2009-04-15  Alexander Kojevnikov  <alexander@kojevnikov.com>

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/FullscreenWindow.cs:
	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/NowPlayingInterface.cs:
	Fixed the full-screen mode visual glitch in the Now Playing source
	(BGO #539024)

2009-04-15  Alexander Kojevnikov  <alexander@kojevnikov.com>

	* src/Libraries/Hyena.Gui/Hyena.Widgets/RatingEntry.cs: Fixed the
	RatingEntry colors on dark themes (BGO #576459)

2009-04-15  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.AudioCd/Banshee.AudioCd/AudioCdDiscModel.cs:
	Handle YYYY release date strings from MusicBrainz (BGO #578073)

2009-04-15  Gabriel Burt  <gabriel.burt@gmail.com>

	* build/m4/shamrock/nunit.m4: If nunit is not found, look for mono-nunit.

2009-04-14  Alexander Kojevnikov  <alexander@kojevnikov.com>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/FilteredListSourceContents.cs:
	Don't change the browser height when the recommendations pane is shown
	(BGO #578896)

2009-04-14  Alexander Kojevnikov  <alexander@kojevnikov.com>

	* src/Core/Banshee.ThickClient/Banshee.Preferences.Gui/PreferenceDialog.cs:
	Setting default height for the Preferences dialog (BGO #552620)

2009-04-14  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TaskStatusIcon.cs: Set
	the sensitivity based on whether any bg tasks are active, so less
	intrusive when there aren't, and in general, distinguishable.

2009-04-14  Alexander Kojevnikov  <alexander@kojevnikov.com>

	* .gitignore: Added *.mdb

2009-04-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* tests/Analyzer/Analyzer.cs: Fix warnings.

2009-04-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLite3.cs:
	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLiteBase.cs:
	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLiteCommand.cs: